# kdroid-desktop

./: CMakeLists.txt  README
po/: CMakeLists.txt  de.po  extract-messages.sh  kdroid.pot
src/: CMakeLists.txt  Messages.sh  kdroid.cpp  kdroid.desktop  kdroid.desktop.template  kdroid.h  kdroid.kcfg  kdroid.notifyrc  kdroidui.rc  kdroidxmlgui.cpp  kdroidxmlgui.h  main.cpp  settings.kcfgc  xmlhandler.cpp  xmlhandler.h
src/contact/: contact.cpp  contact.h  contactlist.cpp  contactlist.h
src/dbus/: messagedbushandler.cpp  messagedbushandler.h  org.kde.kdroid.Message.xml
src/net/: dispatcher.cpp  dispatcher.h  packet.cpp  packet.h  port.cpp  port.h  tcpclientport.cpp  tcpclientport.h  tcpport.cpp  tcpport.h  tcpserverport.cpp  tcpserverport.h  udpport.cpp  udpport.h
src/sms/: smslist.cpp  smslist.h  smsmessage.cpp  smsmessage.h
src/util/: phonenumberutil.cpp  phonenumberutil.h
src/view/: contactitemdelegate.cpp  contactitemdelegate.h  kdroidview.cpp  kdroidview.h  kdroidview_base.ui  kdroidxmlgui.cpp  kdroidxmlgui.h  prefs_base.ui  sendview.cpp  sendview.h  sendview_base.ui  smsitemdelegate.cpp  smsitemdelegate.h
